fixed fav.php on mobile size

--- a/style.css
+++ b/style.css
@@ -82,8 +82,6 @@ h1 {
     font-size:  250%;}
 #newsfeed {
 	text-align: left;
-	position: fixed;
-	top: 160px;
 	right:  5vw;
 	}
 #menu_container {
@@ -160,13 +158,7 @@ h1 {
 
 #news {
     color: black;
-    font-family: 'Times New Roman';
-	position: fixed;
-	top: 269px;
-	right:  200px;
-	height:  35vw;
-	width: 35vw;
-	overflow:  auto;
+    font-family: 'Times New Roman';	
 	border:  solid 1px #000;
 	padding:  5px;
 	}
